--- a/package.json
+++ b/package.json
@@ -1,93 +1,107 @@
 {
-  "name": "newscbot2022",
-  "version": "1.0.0",
-  "description": "<p align=\"center\"> <img src=\"https://telegra.ph/file/6ab4daac226292a112540.jpg\" alt=\"YUKI BOT\" width=\"500\"/>",
-  "main": "index.js",
-  "type": "module",
-  "directories": {
-    "lib": "lib",
-    "src": "src",
-    "plugins": "plugins"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "test2": "node index.js"
-  },
-  "keywords": [
-    "termux-whatsapp-bot",
-    "whatsapp-bot",
-    "whatsapp",
-    "js-whatsapp",
-    "whatsapp",
-    "Games-wabot",
-    "wabot-aq",
-    "multi-device",
-    "MD",
-    "baileys-md"
-  ],
-  "homepage": "https://github.com/saipulanuar/RPG-MD-V5",
-  "author": {
-    "name": "Saipul Anuar"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/saipulanuar/RPG-MD-V5.git"
-  },
-  "bugs": {
-    "url": "https://github.com/saipulanuar/RPG-MD-V5/issues"
-  },
-  "license": "ISC",
-  "dependencies": {
-    "@adiwajshing/baileys": "github:Saipulanuar/baileys",
-        "@bochilteam/scraper": "^2.0.0",
-        "@vitalets/google-translate-api": "^8.0.0",
-        "awesome-phonenumber": "^2.68.0",
-        "axios": "^0.24.0",
-        "brainly-scraper-v2": "^1.1.2",
-        "cfonts": "^2.10.0",
-        "chalk": "^5.0.0",
-        "cheerio": "^1.0.0-rc.10",
+    "name": "PutraModz",
+    "version": "3.10.18",
+    "description": "WhatsApp BOT By putra",
+    "main": "index.js",
+    "type": "module",
+    "directories": {
+        "lib": "lib",
+        "src": "src",
+        "plugins": "plugins"
+    },
+    "scripts": {
+        "start": "node index.js",
+        "test": "node test.js",
+        "test2": "nodemon index.js"
+    },
+    "keywords": [
+        "termux-whatsapp-bot",
+        "whatsapp-bot",
+        "whatsapp",
+        "js-whatsapp",
+        "whatsapp",
+        "Games-wabot",
+        "wabot-aq",
+        "multi-device",
+        "MD",
+        "baileys-md"
+    ],
+    "homepage": "https://github.com/BochilGaming/games-wabot",
+    "author": {
+        "name": "BochilGaming"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Lucife-Putra/AMELIA-BOTZ-PUT"
+    },
+    "bugs": {
+        "url": "https://github.com/Lucife-Putra/AMELIA-BOTZ-PUT/"
+    },
+    "license": "GPL-3.0-or-later",
+    "dependencies": {
+        "@adiwajshing/baileys": "^4.4.0",
+        "@adiwajshing/keyed-db": "^0.2.4",
+        "@arugaz/ai2d": "^1.0.1-z.8",
+        "@bochilteam/scraper": "^3.0.0",
+        "@ibaraki-douji/pixivts": "^2.0.2",
+        "@vitalets/google-translate-api": "^9.1.0",
+        "acrcloud": "^1.4.0",
+        "awesome-phonenumber": "^4.3.0",
+        "axios": "^1.2.2",
+        "brainly-scraper-v2": "^2.2.6",
+        "cfonts": "^3.1.1",
+        "chalk": "^5.2.0",
+        "cheerio": "^1.0.0-rc.12",
         "colors": "1.4.0",
         "deepai": "^1.0.21",
-        "dhn-api": "^1.1.3",
         "didyoumean": "^1.2.2",
-        "express": "^4.17.3",
-        "file-type": "^17.1.1",
+        "dhn-api": "^1.1.3",
+        "emoji-api": "^3.0.1",
+        "express": "^4.18.2",
+        "express-status-monitor": "^1.3.4",
+        "fb-downloader-scrapper": "^1.0.3",
+        "file-type": "^18.2.0",
         "fluent-ffmpeg": "^2.1.2",
-        "formdata-node": "^4.3.2",
+        "formdata-node": "^5.0.0",
         "genshin": "^1.2.4",
-        "google-it": "^1.6.2",
-        "google-play-scraper": "^9.1.1",
+        "google-it": "^1.6.4",
+        "google-play-scraper": "github:facundoolano/google-play-scraper",
+        "https": "^1.0.0",
         "human-readable": "^0.2.1",
-        "hxz-api": "^1.0.1",
-        "imgbb-uploader": "^1.3.5",
-	"jimp": "^0.16.2",
-        "jsdom": "^19.0.0",
+        "instagram-url-direct": "^1.0.13",
+        "imgbb-uploader": "^1.5.0",
+        "jadianime-ts": "^2.0.0",
+        "jimp": "^0.16.2",
+        "jsdom": "^21.0.0",
+        "knights-canvas": "^1.3.7-a",
         "lodash": "^4.17.21",
-        "lowdb": "^3.0.0",
-        "moment-timezone": "^0.5.33",
-        "mongoose": "github:Automattic/mongoose",
-        "nekos.life": "^2.0.7",
-        "node-fetch": "^3.2.0",
+        "lowdb": "^5.0.5",
+        "mime-types": "^2.1.35",
+        "moment-timezone": "^0.5.40",
+        "mongoose": "^6.8.3",
+        "nekos.life": "^3.0.0",
+        "node-fetch": "^3.3.0",
         "node-gtts": "^2.0.2",
-        "node-os-utils": "^1.3.6",
-        "node-webpmux": "^3.1.1",
+        "node-os-utils": "^1.3.7",
+        "node-webpmux": "^3.1.3",
+        "ocr-space-api-wrapper": "^2.1.3",
+        "openai": "^3.1.0",
         "perf_hooks": "^0.0.1",
-        "pino": "^7.8.0",
-        "pino-pretty": "^7.5.1",
-        "qrcode": "^1.5.0",
+        "pino": "^8.8.0",
+        "pino-pretty": "^9.1.1",
+        "qrcode": "^1.5.1",
         "qrcode-terminal": "^0.12.0",
         "readline": "^1.3.0",
         "remove.bg": "^1.3.0",
         "similarity": "^1.2.1",
-        "socket.io": "^4.4.1",
+        "socket.io": "^4.5.4",
         "syntax-error": "^1.4.0",
+        "social_media_downloader": "^1.0.6",
         "terminal-image": "^2.0.0",
         "translate-google-api": "^1.0.4",
         "url-regex-safe": "^3.0.0",
-        "xfarr-api": "^1.0.3",
-        "yargs": "^17.3.1",
+        "wa-sticker-formatter": "^4.3.2",
+        "yargs": "^17.6.2",
         "zs-extract": "^1.4.1"
     },
     "optionalDependencies": {
